--- a/src/main/resources/config/application-prd.properties
+++ b/src/main/resources/config/application-prd.properties
@@ -1,10 +1,3 @@
-server.port=8088
-#\u70ed\u90e8\u7f72\u751f\u6548
-spring.devtools.restart.enabled: true
-#\u8bbe\u7f6e\u91cd\u542f\u7684\u76ee\u5f55
-#spring.devtools.restart.additional-paths: src/main/java
-#classpath\u76ee\u5f55\u4e0b\u7684WEB-INF\u6587\u4ef6\u5939\u5185\u5bb9\u4fee\u6539\u4e0d\u91cd\u542f
-spring.devtools.restart.exclude: WEB-INF/**
 
-#\u8bfb\u53d6\u503c\u914d\u7f6e
+#\u8BFB\u53D6\u503C\u914D\u7F6E
 config.name=prd
