--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,20 +1,20 @@
-#\u8bbf\u95ee\u7aef\u53e3
-server.port=8088
-#\u8bbe\u5b9aTomcat\u7684base \u76ee\u5f55
+#\u8BBF\u95EE\u7AEF\u53E3
+server.port=8290
+#\u8BBE\u5B9ATomcat\u7684base \u76EE\u5F55
 server.tomcat.basedir=D:/Program Files/Temp_Tomcat
-#\u70ed\u90e8\u7f72\u751f\u6548
+#\u70ED\u90E8\u7F72\u751F\u6548
 spring.devtools.restart.enabled=true
-#\u8bbe\u7f6e\u91cd\u542f\u7684\u76ee\u5f55
+#\u8BBE\u7F6E\u91CD\u542F\u7684\u76EE\u5F55
 #spring.devtools.restart.additional-paths: src/main/java
-#classpath\u76ee\u5f55\u4e0b\u7684WEB-INF\u6587\u4ef6\u5939\u5185\u5bb9\u4fee\u6539\u4e0d\u91cd\u542f
+#classpath\u76EE\u5F55\u4E0B\u7684WEB-INF\u6587\u4EF6\u5939\u5185\u5BB9\u4FEE\u6539\u4E0D\u91CD\u542F
 spring.devtools.restart.exclude=WEB-INF/**
 
-#\u8bfb\u53d6\u503c\u914d\u7f6e
+#\u8BFB\u53D6\u503C\u914D\u7F6E
 spring.profiles.active=dev
-#spring.profiles.active = dev,database --\u52a0\u8f7d\u591a\u4e2a\u914d\u7f6e\u6587\u4ef6
+#spring.profiles.active = dev,database --\u52A0\u8F7D\u591A\u4E2A\u914D\u7F6E\u6587\u4EF6
 
-#mybatis\u914d\u7f6e
+#mybatis\u914D\u7F6E
 mybatis.config-location=classpath:config/mybatis-config.xml
 
-#tomcat\u865a\u62df\u76ee\u5f55\u914d\u7f6e,url\u524d\u7528
+#tomcat\u865A\u62DF\u76EE\u5F55\u914D\u7F6E,url\u524D\u7528
 server.servlet.context-path=/demo
