--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -1,26 +1,59 @@
-server.port=8088
-#\u70ed\u90e8\u7f72\u751f\u6548
-spring.devtools.restart.enabled=true
-#\u8bbe\u7f6e\u91cd\u542f\u7684\u76ee\u5f55
-#spring.devtools.restart.additional-paths: src/main/java
-#classpath\u76ee\u5f55\u4e0b\u7684WEB-INF\u6587\u4ef6\u5939\u5185\u5bb9\u4fee\u6539\u4e0d\u91cd\u542f
-spring.devtools.restart.exclude=WEB-INF/**
 
-#\u8bfb\u53d6\u503c\u914d\u7f6e
+#\u8BFB\u53D6\u503C\u914D\u7F6E
 config.name=Dev Sys...
 
-#log\u914d\u7f6e
+#log\u914D\u7F6E
 logging.file=D:/opt/demo.log
-#showSql
+#mybatis\u65E5\u5FD7\u8F93\u51FAsql
 logging.level.com.csk.dao.mapper=DEBUG
-#\u5173\u95edCONDITIONS EVALUATION REPORT
+#\u5173\u95EDCONDITIONS EVALUATION REPORT
 logging.level.org.springframework.boot.autoconfigure=ERROR
 
-#\u6570\u636e\u5e93\u914d\u7f6e
+#\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/yms?useUnicode=true&amp;characterEncoding=UTF-8
 spring.datasource.username=csk
 spring.datasource.password=abc
+#stat\uFF1ADruid\u5185\u7F6E\u63D0\u4F9B\u4E00\u4E2AStatFilter,\u7528\u4E8E\u7EDF\u8BA1\u76D1\u63A7\u4FE1\u606F\u3002
+#wall\uFF1ADruid\u9632\u5FA1SQL\u6CE8\u5165\u653B\u51FB\u7684WallFilter\u5C31\u662F\u901A\u8FC7Druid\u7684SQL Parser\u5206\u6790\u3002Druid\u63D0\u4F9B\u7684SQL Parser\u53EF\u4EE5\u5728JDBC\u5C42\u62E6\u622ASQL\u505A\u76F8\u5E94\u5904\u7406\uFF0C\u6BD4\u5982\u8BF4\u5206\u5E93\u5206\u8868\u3001\u5BA1\u8BA1\u7B49\u3002
+#---------------------
+
+#\u8FDE\u63A5\u6C60\u7684\u914D\u7F6E\u4FE1\u606F
+spring.datasource.druid.initial-size=10
+#\u6700\u5C0F\u8FDE\u63A5\u6C60\u6570\u91CF
+spring.datasource.druid.min-idle=10
+#\u6700\u5927\u8FDE\u63A5\u6C60\u6570\u91CF
+spring.datasource.druid.max-active=20
+#\u83B7\u53D6\u8FDE\u63A5\u65F6\u6700\u5927\u7B49\u5F85\u65F6\u95F4\uFF0C\u5355\u4F4D\u6BEB\u79D2\u3002\u914D\u7F6E\u4E86maxWait\u4E4B\u540E\uFF0C\u7F3A\u7701\u542F\u7528\u516C\u5E73\u9501\uFF0C\u5E76\u53D1\u6548\u7387\u4F1A\u6709\u6240\u4E0B#\u964D\uFF0C\u5982\u679C\u9700\u8981\u53EF\u4EE5\u901A\u8FC7\u914D\u7F6EuseUnfairLock\u5C5E\u6027\u4E3Atrue\u4F7F\u7528\u975E\u516C\u5E73\u9501\u3002
+spring.datasource.druid.maxWait=60000
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
+# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.druid.minEvictableIdleTimeMillis=30000
+spring.datasource.druid.validationQuery=SELECT count(1) FROM USERINFO
+spring.datasource.druid.test-on-borrow=true
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+# \u6253\u5F00PSCache\uFF0C\u5E76\u4E14\u6307\u5B9A\u6BCF\u4E2A\u8FDE\u63A5\u4E0APSCache\u7684\u5927\u5C0F
+spring.datasource.druid.poolPreparedStatements=true
+spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
+spring.datasource.druid.filters=stat,wall,slf4j
+# \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
+spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+# \u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
+spring.datasource.druid.useGlobalDataSourceStat=true
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
+spring.datasource.druid.stat-view-servlet.deny=192.168.0.0/18
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin
+
 #########################################
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
